--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,17 @@ pytest = "8.3.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^0.24.0"
+pytest-cov = "5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = "--cov=src --cov-report=term-missing"
+
+[tool.coverage.run]
+omit = [
+    "src/inference/make_request.py",
+    "src/inference/make_concurrent_request.py"
+]
