--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pytest = "8.3.3"
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^0.24.0"
 pytest-cov = "5.0.0"
+faker = "^30.3.0"
 
 [build-system]
 requires = ["poetry-core"]
